Fix popup bottom spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -15788,6 +15788,7 @@ form button {
   width: 100%;
   height: 100%;
   max-height: 100vh;
+  padding: 40px 0;
   transition: all 0.25s linear 0.1s;
   opacity: 0;
   pointer-events: none;
@@ -15799,10 +15800,11 @@ form button {
   pointer-events: all;
 }
 .popup-wrapper .popup {
-  position: absolute;
+  position: relative;
 }
 .credit-popup .popup {
   left: 50%;
+  top: 0;
   z-index: 200;
   width: 93%;
   height: auto;
